[gd_scene load_steps=17 format=3 uid="uid://ucj0ft860dk2"]

[ext_resource type="Script" uid="uid://bl4rvfo6g3wbf" path="res://lessons_reference/video_16/game.gd" id="1_0kaqy"]
[ext_resource type="Texture2D" uid="uid://d4xbt08at4n5" path="res://mob/qwantani_dusk_2_puresky_1k (1).hdr" id="2_7aop4"]
[ext_resource type="PackedScene" uid="uid://d3kp34dihjeyd" path="res://lessons_reference/video_16/player/player.tscn" id="3_qlm8w"]
[ext_resource type="PackedScene" uid="uid://xtl5acmpaa04" path="res://lessons_reference/video_16/mob/spawner_3d.tscn" id="4_pwf4r"]
[ext_resource type="PackedScene" uid="uid://bpcn5j0ngr8cd" path="res://mob/robot_01.tscn" id="5_ebcg0"]
[ext_resource type="PackedScene" uid="uid://banlvpn7x3foq" path="res://mob/robot_02.tscn" id="6_w2pw7"]
[ext_resource type="PackedScene" uid="uid://dfwbq2vombjvr" path="res://lessons_reference/video_16/mob/mob.tscn" id="7_v1m67"]
[ext_resource type="Material" uid="uid://cp4gi8r3s3twb" path="res://lessons_reference/video_16/level/platforms.tres" id="10_8w1h3"]
[ext_resource type="PackedScene" uid="uid://c2i8s3i2f88xg" path="res://Large Building.glb" id="11_wr76r"]
[ext_resource type="PackedScene" uid="uid://cn300mvvuokey" path="res://esset/char/ddd/Shipping Container.glb" id="12_7aop4"]
[ext_resource type="Script" uid="uid://kx1spi0ucns2" path="res://lessons_reference/video_16/control.gd" id="14_x2r7k"]
[ext_resource type="PackedScene" uid="uid://bm5db3iquwn2e" path="res://esset/char/ddd/golden_gate_bridge.glb" id="15_15es5"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_f68rl"]
panorama = ExtResource("2_7aop4")
energy_multiplier = 0.5

[sub_resource type="Sky" id="Sky_ircu3"]
sky_material = SubResource("PanoramaSkyMaterial_f68rl")

[sub_resource type="Environment" id="Environment_i6xss"]
background_mode = 2
sky = SubResource("Sky_ircu3")

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_xiq5r"]

[node name="Game" type="Node3D"]
script = ExtResource("1_0kaqy")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_i6xss")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.612373, 0.353553, 0, 0.5, 0.866026, -0.707107, -0.612373, 0.353553, 0, 4.59512, 1.18414)
shadow_enabled = true
directional_shadow_max_distance = 40.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="DirectionalLight3D"]
transform = Transform3D(0.707107, -0.612373, 0.353553, 0, 0.5, 0.866026, -0.707107, -0.612373, 0.353553, 14.8593, 17.1742, -6.74683)
light_energy = 0.196
shadow_enabled = true
directional_shadow_max_distance = 40.0

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 28.0
offset_top = 15.0
offset_right = 256.0
offset_bottom = 101.0
theme_override_font_sizes/font_size = 60
text = "Score: 0"

[node name="Player" parent="." instance=ExtResource("3_qlm8w")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.0831079, 3.71307, 86.2109)

[node name="KillPlane" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, -7.95203, -6.5)
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="KillPlane"]
transform = Transform3D(16.98, 0, 0, 0, 1, 0, 0, 0, 16.0946, 26.9738, 0, 95.1118)
shape = SubResource("WorldBoundaryShape3D_xiq5r")

[node name="MobSpawner3D" parent="." instance=ExtResource("4_pwf4r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.1494, 2.70275, -29.1291)
mob_to_spawn = ExtResource("5_ebcg0")

[node name="MobSpawner3D2" parent="." instance=ExtResource("4_pwf4r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.980113, 1.36352, 23.052)
mob_to_spawn = ExtResource("6_w2pw7")

[node name="MobSpawner3D3" parent="." instance=ExtResource("4_pwf4r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 29.9312, 3.16892, 88.6327)
mob_to_spawn = ExtResource("7_v1m67")

[node name="MobSpawner3D4" parent="." instance=ExtResource("4_pwf4r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.370026, 3.94613, 203.352)
mob_to_spawn = ExtResource("5_ebcg0")

[node name="MobSpawner3D5" parent="." instance=ExtResource("4_pwf4r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -122.739, 2.16941, 89.7001)
mob_to_spawn = ExtResource("7_v1m67")

[node name="MobSpawner3D6" parent="." instance=ExtResource("4_pwf4r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 145.426, 0.5, 91.4057)
mob_to_spawn = ExtResource("7_v1m67")

[node name="WorldEnvironment2" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_i6xss")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DeathMenu" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 1716.0
offset_bottom = 881.0
script = ExtResource("14_x2r7k")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/DeathMenu"]
layout_mode = 0
offset_left = -40.0
offset_right = 1749.0
offset_bottom = 890.0
color = Color(0.136826, 0.136826, 0.136826, 1)

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/DeathMenu"]
layout_mode = 0
offset_left = 12.0
offset_top = -126.0
offset_right = 1721.0
offset_bottom = 739.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/DeathMenu/CenterContainer"]
layout_mode = 2

[node name="LblTitle" type="Label" parent="CanvasLayer/DeathMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = "Game Over"

[node name="LblReason" type="Label" parent="CanvasLayer/DeathMenu/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="BtnRestart" type="Button" parent="CanvasLayer/DeathMenu/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Restart"

[node name="BtnMainMenu" type="Button" parent="CanvasLayer/DeathMenu/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Menu"

[node name="Node3D" type="Node3D" parent="."]

[node name="Shipping Container" parent="Node3D" instance=ExtResource("12_7aop4")]
transform = Transform3D(1.88528, 0, -0.667614, 0, 2, 0, 0.667614, 0, 1.88528, -4.57236, 3.20091, 90.1051)

[node name="Platform4" type="CSGBox3D" parent="Node3D/Shipping Container"]
transform = Transform3D(0.123852, 0, 1.49012e-08, 0, 0.111751, 0, -1.49012e-08, 0, 0.401468, 0.0195045, 0.0249994, 0.7202)
visible = false
use_collision = true
size = Vector3(13, 10.4364, 8)
material = ExtResource("10_8w1h3")

[node name="Large Building" parent="Node3D/Shipping Container/Platform4" instance=ExtResource("11_wr76r")]
transform = Transform3D(17.8423, 0, 0, 0, 10, 0, 0, 0, 11.01, 0, -10.3863, 0)
visible = false

[node name="Shipping Container2" parent="Node3D" instance=ExtResource("12_7aop4")]
transform = Transform3D(1.80965, 0, 0.851559, 0, 2, 0, -0.851559, 0, 1.80965, 8.23617, 3.20091, 84.7259)

[node name="Platform4" type="CSGBox3D" parent="Node3D/Shipping Container2"]
transform = Transform3D(0.123852, 0, 1.49012e-08, 0, 0.111751, 0, -1.49012e-08, 0, 0.401468, 0.0195045, 0.0249994, 0.7202)
visible = false
use_collision = true
size = Vector3(13, 10.4364, 8)
material = ExtResource("10_8w1h3")

[node name="Large Building" parent="Node3D/Shipping Container2/Platform4" instance=ExtResource("11_wr76r")]
transform = Transform3D(17.8423, 0, 0, 0, 10, 0, 0, 0, 11.01, 0, -10.3863, 0)
visible = false

[node name="Shipping Container3" parent="Node3D" instance=ExtResource("12_7aop4")]
transform = Transform3D(1.80965, 0, 0.851559, 0, 2, 0, -0.851559, 0, 1.80965, 30.5975, 3.20091, 87.2146)

[node name="Platform4" type="CSGBox3D" parent="Node3D/Shipping Container3"]
transform = Transform3D(0.123852, 0, 1.49012e-08, 0, 0.111751, 0, -1.49012e-08, 0, 0.401468, 0.0195045, 0.0249994, 0.7202)
visible = false
use_collision = true
size = Vector3(13, 10.4364, 8)
material = ExtResource("10_8w1h3")

[node name="Large Building" parent="Node3D/Shipping Container3/Platform4" instance=ExtResource("11_wr76r")]
transform = Transform3D(17.8423, 0, 0, 0, 10, 0, 0, 0, 11.01, 0, -10.3863, 0)
visible = false

[node name="Shipping Container4" parent="Node3D" instance=ExtResource("12_7aop4")]
transform = Transform3D(1.88528, 0, -0.667614, 0, 2, 0, 0.667614, 0, 1.88528, -60.5968, 3.20091, 90.1051)

[node name="Platform4" type="CSGBox3D" parent="Node3D/Shipping Container4"]
transform = Transform3D(0.123852, 0, 1.49012e-08, 0, 0.111751, 0, -1.49012e-08, 0, 0.401468, 0.0195045, 0.0249994, 0.7202)
visible = false
use_collision = true
size = Vector3(13, 10.4364, 8)
material = ExtResource("10_8w1h3")

[node name="Large Building" parent="Node3D/Shipping Container4/Platform4" instance=ExtResource("11_wr76r")]
transform = Transform3D(17.8423, 0, 0, 0, 10, 0, 0, 0, 11.01, 0, -10.3863, 0)
visible = false

[node name="Shipping Container5" parent="Node3D" instance=ExtResource("12_7aop4")]
transform = Transform3D(1.80965, 0, 0.851559, 0, 2, 0, -0.851559, 0, 1.80965, -47.7883, 3.20091, 84.7259)

[node name="Platform4" type="CSGBox3D" parent="Node3D/Shipping Container5"]
transform = Transform3D(0.123852, 0, 1.49012e-08, 0, 0.111751, 0, -1.49012e-08, 0, 0.401468, 0.0195045, 0.0249994, 0.7202)
visible = false
use_collision = true
size = Vector3(13, 10.4364, 8)
material = ExtResource("10_8w1h3")

[node name="Large Building" parent="Node3D/Shipping Container5/Platform4" instance=ExtResource("11_wr76r")]
transform = Transform3D(17.8423, 0, 0, 0, 10, 0, 0, 0, 11.01, 0, -10.3863, 0)
visible = false

[node name="Shipping Container6" parent="Node3D" instance=ExtResource("12_7aop4")]
transform = Transform3D(1.80965, 0, 0.851559, 0, 2, 0, -0.851559, 0, 1.80965, -25.4269, 3.20091, 87.2146)

[node name="Platform4" type="CSGBox3D" parent="Node3D/Shipping Container6"]
transform = Transform3D(0.123852, 0, 1.49012e-08, 0, 0.111751, 0, -1.49012e-08, 0, 0.401468, 0.0195045, 0.0249994, 0.7202)
visible = false
use_collision = true
size = Vector3(13, 10.4364, 8)
material = ExtResource("10_8w1h3")

[node name="Large Building" parent="Node3D/Shipping Container6/Platform4" instance=ExtResource("11_wr76r")]
transform = Transform3D(17.8423, 0, 0, 0, 10, 0, 0, 0, 11.01, 0, -10.3863, 0)
visible = false

[node name="Shipping Container7" parent="Node3D" instance=ExtResource("12_7aop4")]
transform = Transform3D(0.918726, 0, 1.7765, 0, 2, 0, -1.7765, 0, 0.918726, 1.16125, -0.529428, 145.198)

[node name="Platform4" type="CSGBox3D" parent="Node3D/Shipping Container7"]
transform = Transform3D(0.123852, 0, 1.49012e-08, 0, 0.111751, 0, -1.49012e-08, 0, 0.401468, 0.0195045, 0.0249994, 0.7202)
visible = false
use_collision = true
size = Vector3(13, 10.4364, 8)
material = ExtResource("10_8w1h3")

[node name="Large Building" parent="Node3D/Shipping Container7/Platform4" instance=ExtResource("11_wr76r")]
transform = Transform3D(17.8423, 0, 0, 0, 10, 0, 0, 0, 11.01, 0, -10.3863, 0)
visible = false

[node name="Shipping Container8" parent="Node3D" instance=ExtResource("12_7aop4")]
transform = Transform3D(-0.596549, 0, 1.90896, 0, 2, 0, -1.90896, 0, -0.596549, -2.41905, -0.529428, 131.775)

[node name="Platform4" type="CSGBox3D" parent="Node3D/Shipping Container8"]
transform = Transform3D(0.123852, 0, 1.49012e-08, 0, 0.111751, 0, -1.49012e-08, 0, 0.401468, 0.0195045, 0.0249994, 0.7202)
visible = false
use_collision = true
size = Vector3(13, 10.4364, 8)
material = ExtResource("10_8w1h3")

[node name="Large Building" parent="Node3D/Shipping Container8/Platform4" instance=ExtResource("11_wr76r")]
transform = Transform3D(17.8423, 0, 0, 0, 10, 0, 0, 0, 11.01, 0, -10.3863, 0)
visible = false

[node name="Shipping Container9" parent="Node3D" instance=ExtResource("12_7aop4")]
transform = Transform3D(-0.596549, 0, 1.90896, 0, 2, 0, -1.90896, 0, -0.596549, 3.09884, -0.529428, 109.963)

[node name="Platform4" type="CSGBox3D" parent="Node3D/Shipping Container9"]
transform = Transform3D(0.123852, 0, 1.49012e-08, 0, 0.111751, 0, -1.49012e-08, 0, 0.401468, 0.0195045, 0.0249994, 0.7202)
visible = false
use_collision = true
size = Vector3(13, 10.4364, 8)
material = ExtResource("10_8w1h3")

[node name="Large Building" parent="Node3D/Shipping Container9/Platform4" instance=ExtResource("11_wr76r")]
transform = Transform3D(17.8423, 0, 0, 0, 10, 0, 0, 0, 11.01, 0, -10.3863, 0)
visible = false

[node name="Shipping Container10" parent="Node3D" instance=ExtResource("12_7aop4")]
transform = Transform3D(0.918726, 0, 1.7765, 0, 2, 0, -1.7765, 0, 0.918726, 1.16125, -0.529428, 58.9888)

[node name="Platform4" type="CSGBox3D" parent="Node3D/Shipping Container10"]
transform = Transform3D(0.123852, 0, 1.49012e-08, 0, 0.111751, 0, -1.49012e-08, 0, 0.401468, 0.0195045, 0.0249994, 0.7202)
visible = false
use_collision = true
size = Vector3(13, 10.4364, 8)
material = ExtResource("10_8w1h3")

[node name="Large Building" parent="Node3D/Shipping Container10/Platform4" instance=ExtResource("11_wr76r")]
transform = Transform3D(17.8423, 0, 0, 0, 10, 0, 0, 0, 11.01, 0, -10.3863, 0)
visible = false

[node name="Shipping Container13" parent="Node3D" instance=ExtResource("12_7aop4")]
transform = Transform3D(0.918726, 0, 1.7765, 0, 2, 0, -1.7765, 0, 0.918726, 3.05765, 3.03987, 85.0147)

[node name="Platform4" type="CSGBox3D" parent="Node3D/Shipping Container13"]
transform = Transform3D(0.123852, 0, 1.49012e-08, 0, 0.111751, 0, -1.49012e-08, 0, 0.401468, 0.0195045, 0.0249994, 0.7202)
visible = false
use_collision = true
size = Vector3(13, 10.4364, 8)
material = ExtResource("10_8w1h3")

[node name="Large Building" parent="Node3D/Shipping Container13/Platform4" instance=ExtResource("11_wr76r")]
transform = Transform3D(17.8423, 0, 0, 0, 10, 0, 0, 0, 11.01, 0, -10.3863, 0)
visible = false

[node name="Shipping Container14" parent="Node3D" instance=ExtResource("12_7aop4")]
transform = Transform3D(0.918726, 0, 1.7765, 0, 2, 0, -1.7765, 0, 0.918726, 3.05765, 3.03987, 85.0147)

[node name="Platform4" type="CSGBox3D" parent="Node3D/Shipping Container14"]
transform = Transform3D(0.123852, 0, 1.49012e-08, 0, 0.111751, 0, -1.49012e-08, 0, 0.401468, 0.0195045, 0.0249994, 0.7202)
visible = false
use_collision = true
size = Vector3(13, 10.4364, 8)
material = ExtResource("10_8w1h3")

[node name="Large Building" parent="Node3D/Shipping Container14/Platform4" instance=ExtResource("11_wr76r")]
transform = Transform3D(17.8423, 0, 0, 0, 10, 0, 0, 0, 11.01, 0, -10.3863, 0)
visible = false

[node name="Shipping Container11" parent="Node3D" instance=ExtResource("12_7aop4")]
transform = Transform3D(-0.596549, 0, 1.90896, 0, 2, 0, -1.90896, 0, -0.596549, -2.41905, -0.529428, 45.5659)

[node name="Platform4" type="CSGBox3D" parent="Node3D/Shipping Container11"]
transform = Transform3D(0.123852, 0, 1.49012e-08, 0, 0.111751, 0, -1.49012e-08, 0, 0.401468, 0.0195045, 0.0249994, 0.7202)
visible = false
use_collision = true
size = Vector3(13, 10.4364, 8)
material = ExtResource("10_8w1h3")

[node name="Large Building" parent="Node3D/Shipping Container11/Platform4" instance=ExtResource("11_wr76r")]
transform = Transform3D(17.8423, 0, 0, 0, 10, 0, 0, 0, 11.01, 0, -10.3863, 0)
visible = false

[node name="Shipping Container12" parent="Node3D" instance=ExtResource("12_7aop4")]
transform = Transform3D(-0.596549, 0, 1.90896, 0, 2, 0, -1.90896, 0, -0.596549, 3.09884, -0.529428, 23.7536)

[node name="Platform4" type="CSGBox3D" parent="Node3D/Shipping Container12"]
transform = Transform3D(0.123852, 0, 1.49012e-08, 0, 0.111751, 0, -1.49012e-08, 0, 0.401468, 0.0195045, 0.0249994, 0.7202)
visible = false
use_collision = true
size = Vector3(13, 10.4364, 8)
material = ExtResource("10_8w1h3")

[node name="Large Building" parent="Node3D/Shipping Container12/Platform4" instance=ExtResource("11_wr76r")]
transform = Transform3D(17.8423, 0, 0, 0, 10, 0, 0, 0, 11.01, 0, -10.3863, 0)
visible = false

[node name="Sketchfab_Scene2" parent="Node3D" instance=ExtResource("15_15es5")]
transform = Transform3D(-3.49691e-08, 0, 0.8, 0, 0.8, 0, -0.8, 0, -3.49691e-08, -89.1303, -15.3961, 88.1875)

[node name="Platform4" type="CSGBox3D" parent="Node3D/Sketchfab_Scene2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.807797, 16.9133, 131.567)
visible = false
use_collision = true
size = Vector3(13, 10.4364, 384.553)
material = ExtResource("10_8w1h3")

[node name="Sketchfab_Scene" parent="Node3D" instance=ExtResource("15_15es5")]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, -18.7401, -16.2815)

[node name="Platform4" type="CSGBox3D" parent="Node3D/Sketchfab_Scene"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.807797, 16.9133, 131.567)
visible = false
use_collision = true
size = Vector3(13, 10.4364, 384.553)
material = ExtResource("10_8w1h3")

[connection signal="body_entered" from="KillPlane" to="." method="_on_kill_plane_body_entered"]
[connection signal="mob_spawned" from="MobSpawner3D" to="." method="_on_mob_spawner_3d_mob_spawned"]
[connection signal="mob_spawned" from="MobSpawner3D2" to="." method="_on_mob_spawner_3d_mob_spawned"]
[connection signal="mob_spawned" from="MobSpawner3D3" to="." method="_on_mob_spawner_3d_mob_spawned"]
[connection signal="mob_spawned" from="MobSpawner3D4" to="." method="_on_mob_spawner_3d_mob_spawned"]
[connection signal="mob_spawned" from="MobSpawner3D5" to="." method="_on_mob_spawner_3d_mob_spawned"]
[connection signal="mob_spawned" from="MobSpawner3D6" to="." method="_on_mob_spawner_3d_mob_spawned"]
